src/style/sass/pages/_Thermometer.scss
#thermometer{
    position: absolute;
    top: 0;
    left: 0;
    z-index: 10;
    overflow: hidden;
    font-family: "Inknut Antiqua", serif;
    font-style: normal;
    color: $textColor;
    background-color: $backgroundColor;
    width: 100vw;
    height: 100vh;
    &__titleContainer{
        width: 100vw;
        display: flex; 
        justify-content: end;
        align-items: center;
        text-align: center;
        & i{
            font-size: 50px;
            &:hover{
                color: $iconColorHover;
                cursor: pointer;
            }
        }

        &--bubble{
            display: flex;
            font-family: Arial;
            justify-content: center;
            align-items: center;
            font-size: 12px;
            width: 200px;
            height: 50px;
            color: white;
            background-color: black;
            border-radius: 20px;
            margin-right: 10px;
            &:hover{
                font-size: 13px;
                cursor: pointer;
            }
        }
        & > div{
            margin: 0 50px 0 200px ;
            display: flex;

        }
    }
    &__imageContainer{
        display: flex;
        height: 90vh;
        align-items: center;
        justify-content: center;
        &--image{
            display: flex;
            align-items: center;
            & img{
                height: 90vh;
            }
        }
        &--triangle{
            display: grid;
            align-items: center;
            grid-template: repeat(5, 15vh) / 5vw; 
            & img{
                height: 8vh;
            }
        }
        &--rectangle{
            width: 40vw;
            margin: 0 30px;
            border-radius: 30px; 
            display: flex;
            flex-direction: column;
            padding: 10px;
        }
    }
    &__arrowTurnLeftContainer{
        height: 80px;
        width: 80px;
        margin: 20px;
    }
    &__arrowTurnLeftIcon{
        font-size: 50px;
    }
    
    &__frameEmotion{ 
            height: 50% !important;
            margin: auto;
        }
}
.thermometer{
    &__triangle{
        position: relative;
        display:flex;
        align-items: center;
        &--red{
            position: absolute;
            left: 0px;
            opacity: 0;
            &:hover{
                cursor: pointer;
                opacity: 1;
            }
        }    
    }
}
#emotionContainer{
    &__selected--title{
    margin-top: -50px;
    }
    &__selected{
        display: grid;
        grid-template: 100% / 1.5fr 2fr;
        text-align: center;
        align-items: center;
        margin: 10px 0;
    }
    &__notSelected{
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        &--icons img{
            width: 20%;
            height:20%;
        }
    }
}

#containerListOfActions{
    display: grid;
    grid-template: 100% / 150px 65%;
    border: 1px solid #000000;
    &__text {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
    }
}
#listOfActions__img{
    height: 100px !important;
    width: 148px;
    margin: auto;
}

@media screen and (max-width: 1550px){
    #emotionContainer{
        &__selected{
            display: flex;
            flex-direction: column;
            &--title{
                font-size: 20px;
            }
        }
    }
    #thermometer{
        &__frameEmotion{
            width: 200px;
            margin-top: -50px;
        }
    }
}

@media screen and (max-width: 1400px){
    #thermometer__titleContainer{
        flex-direction: column;
        & > div{
            margin: 0;
        }
        
    }
}

// @media screen and (max-width: 1000px){
//     #thermometer{
//         overflow: scroll;
//         &__titleContainer--primary{
//             font-size: 30px;
//         }
//         &__imageContainer{
//             display: flex;
//             flex-direction: column;
//             margin-top: 0;
//             &--image{
//                 margin-top: 30px;
//                 &>img{
//                     height: 70vh
//                 }
//             }
//             &--triangle {
//                 grid-template: repeat(5, 11vh) / 5vw; 
//                 & img{
//                     height: 4vh;
//                 }
//             }
//         } 
//         &__frameEmotion{
//             margin-top: -50px;
//         }
//     }
//     #emotionContainer__notSelected--selectEmotions{
//         font-size: 14px;
//     }
    
//     #listOfActions__img{
//     height: 80px !important;
//     width: 118px;
//     }
//     #containerListOfActions__text {
//         font-size: 10px;
//     }
// }

// @media screen and (max-width: 900px){
//     #thermometer{
//         &__imageContainer{
//             &--image>img{
//                 height:50vh
//             }
//             &--triangle{
//             grid-template: repeat(5, 8vh) / 5vw; 
//             & img{
//                 height: 4.55vh;
//             }
//         }
//         }
//     }
//     #containerListOfActions{
//         grid-template: 100% / 30% 70%;
//     }
//     #listOfActions__img{
//         height: 40px !important;
//         width: 59px;
//     }
// }

// @media screen and (max-width: 550px){
//     #thermometer__frameEmotion{
//         width: 150px;
//     }
//     #emotionContainer__selected--title{
//         font-size: 16px;
//         margin-top: -25px;
//     }
//     #containerListOfActions{
//         grid: 100% / 100%;
//         &__contImg{
//             display:none
//         }
//     }
// }

